Fix CSS Grid out of bounds problem

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
 .item{
 	background-color: white;
   	border: 2px solid gray;
-  	padding: 20px;
 }
 
 #buttons{
